@@ -1,3 +1,10 @@
+2010-05-18  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub-mkrescue.in: Sync up with grub-install in terms of how
+	we handle finding grub-mkimage.  Default to finding grub-mkimage in
+	${bindir} with program_transform_name applied, and provide a
+	--grub-mkimage option to override this.
+
 2010-05-17  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Remove grub-mkisofs.
